--- a/worksheet4.css
+++ b/worksheet4.css
@@ -26,4 +26,37 @@ section:nth-of-type(2n){
 }
 img{
     max-width: 100%;
+    box-sizing: border-box;
+    padding-bottom: 1rem;
+}
+@media screen and (min-width: 400px) {
+    img{
+        border: white solid;
+        border-width: 1em 1em 3em 1em;
+        border-radius: 0.25rem;
+        margin: 0.5rem 0 0 0;
+        box-shadow: 0 0.25rem 0rem #000000ff;
+    }
+    img:nth-of-type(3n+1){
+        transform: rotate(2deg);
+    }
+    img:nth-of-type(3n+2){
+        transform: rotate(-1deg);
+    }
+    img:nth-of-type(3n){
+        transform: rotate(5deg);
+    }
+}
+@media screen and (min-width: 600px){
+    section>div{
+        max-width:600px;
+        margin: auto;
+        text-align: center;
+    }
+    img{
+        max-width: 100%;
+    }
+    .portrait{
+        max-width: 45%
+    }
 }
